# ChorePup

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py  routes.py
app/templates/: add_chore.html  configure_allowances.html  edit_chores.html  index.html
src/chorepup/: __init__.py
