[project]
name = "chorepup"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tim Misiak", email = "tim.misiak+github@gmail.com" }
]
dependencies = [
    "pytz>=2024.2",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chorepup"]
